unpackaged/main/default/objects/GSR_Appliance_Results__c/GSR_Appliance_Results__c.object-meta.xml
<CustomObject>
    <label>GSR Appliance Results</label>
    <nameField>
        <displayFormat>GSR AR-{00000}</displayFormat>
        <label>GSR Appliance Results</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GSR Appliance Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>