unpackaged/main/default/objects/GSR_Appliance_Results__c/fields/Appliance_Location__c.field-meta.xml
<CustomField>
    <fullName>Appliance_Location__c</fullName>
    <label>Appliance Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>