unpackaged/main/default/objects/GSR_Appliance_Results__c/fields/Appliance_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Appliance_Manufacturer__c</fullName>
    <label>Appliance Manufacturer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>