unpackaged/main/default/objects/GSR_Appliance_Results__c/fields/Appliance_Measurement__c.field-meta.xml
<CustomField>
    <fullName>Appliance_Measurement__c</fullName>
    <label>Appliance Measurement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>