unpackaged/main/default/objects/GSR_Appliance_Results__c/fields/Appliance_measurement_type__c.field-meta.xml
<CustomField>
    <fullName>Appliance_measurement_type__c</fullName>
    <label>Appliance measurement type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Operating Pressure mbar</fullName>
            </value>
            <value>
                <fullName>Heat input btu/h</fullName>
            </value>
            <value>
                <fullName>Heat input kw/h</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>