unpackaged/main/default/objects/GSR_Appliance_Results__c/fields/Appliance_model__c.field-meta.xml
<CustomField>
    <fullName>Appliance_model__c</fullName>
    <label>Appliance model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>