unpackaged/main/default/objects/GSR_Appliance_Results__c/fields/Appliance_safe_to_use__c.field-meta.xml
<CustomField>
    <fullName>Appliance_safe_to_use__c</fullName>
    <label>Appliance safe to use</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>