unpackaged/main/default/objects/GSR_Appliance_Results__c/fields/Appliance_Type__c.field-meta.xml
<CustomField>
    <fullName>Appliance_Type__c</fullName>
    <label>Appliance Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>