unpackaged/main/default/objects/GSR_Appliance_Results__c/fields/Combustion_CO2_reading__c.field-meta.xml
<CustomField>
    <fullName>Combustion_CO2_reading__c</fullName>
    <label>Combustion CO2 reading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>