unpackaged/main/default/objects/GSR_Appliance_Results__c/fields/Combustion_Final_Reading__c.field-meta.xml
<CustomField>
    <fullName>Combustion_Final_Reading__c</fullName>
    <label>Combustion Final Reading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>