unpackaged/main/default/objects/GSR_Appliance_Results__c/fields/Combustion_Initial_ratio_reading__c.field-meta.xml
<CustomField>
    <fullName>Combustion_Initial_ratio_reading__c</fullName>
    <label>Combustion Initial ratio reading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>