unpackaged/main/default/objects/GSR_Appliance_Results__c/fields/Flue_Type__c.field-meta.xml
<CustomField>
    <fullName>Flue_Type__c</fullName>
    <label>Flue Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RS</fullName>
            </value>
            <value>
                <fullName>FL</fullName>
            </value>
            <value>
                <fullName>OF</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>