unpackaged/main/default/objects/GSR_Appliance_Results__c/fields/Gas_Council_Number__c.field-meta.xml
<CustomField>
    <fullName>Gas_Council_Number__c</fullName>
    <label>Gas Council Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>