unpackaged/main/default/objects/GSR_Appliance_Results__c/fields/GSR_Submission__c.field-meta.xml
<CustomField>
    <fullName>GSR_Submission__c</fullName>
    <label>GSR Submission</label>
    <referenceTo>GSR_Submission__c</referenceTo>
    <relationshipLabel>GSR Appliance Results</relationshipLabel>
    <relationshipName>GSR_Appliance_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>