unpackaged/main/default/objects/GSR_Appliance_Results__c/fields/Inspected__c.field-meta.xml
<CustomField>
    <fullName>Inspected__c</fullName>
    <label>Inspected</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>