unpackaged/main/default/objects/GSR_Appliance_Results__c/fields/Landlords_Device__c.field-meta.xml
<CustomField>
    <fullName>Landlords_Device__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Landlord&#39;s Device</label>
    <type>Checkbox</type>
</CustomField>