unpackaged/main/default/objects/GSR_Appliance_Results__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Record number</description>
    <displayFormat>GSR AR-{00000}</displayFormat>
    <label>Name</label>
    <type>AutoNumber</type>
</CustomField>