unpackaged/main/default/objects/GSR_Appliance_Results__c/fields/RCS_Label__c.field-meta.xml
<CustomField>
    <fullName>RCS_Label__c</fullName>
    <formula>Appliance_Type__c &amp; &quot; (&quot; &amp; Appliance_Manufacturer__c &amp; &quot; &quot; &amp; Appliance_model__c &amp; &quot;, &quot; &amp; Appliance_Location__c &amp; &quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RCS Label</label>
    <type>Text</type>
</CustomField>