unpackaged/main/default/objects/GSR_Appliance_Results__c/fields/Safety_devices_correct_operation__c.field-meta.xml
<CustomField>
    <fullName>Safety_devices_correct_operation__c</fullName>
    <label>Safety device(s) correct operation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>