unpackaged/main/default/objects/GSR_Appliance_Results__c/fields/Satisfactory_Flue_visual_condition__c.field-meta.xml
<CustomField>
    <fullName>Satisfactory_Flue_visual_condition__c</fullName>
    <label>Satisfactory Flue visual condition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>