unpackaged/main/default/objects/GSR_Appliance_Results__c/fields/Smoke_pellet_flue_flow_test__c.field-meta.xml
<CustomField>
    <fullName>Smoke_pellet_flue_flow_test__c</fullName>
    <label>Smoke pellet flue flow test</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>